fix sell-button height being set to 170px on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -360,8 +360,7 @@ p.info {
   .btn {
       display: flex;
       justify-content: center;  
-      align-items: center;      
-      height: 170px;            
+      align-items: center;            
       overflow: hidden;         
   } 
   
